# Akashi

./: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: ethereum.rs  lib.rs  state.rs  token.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
