[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['rust-vreath-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'rust-vreath-runtime-wasm'
version = '1.0.0'
[dependencies.rust-vreath-runtime]
default-features = false
path = '..'
