[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['akashi-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'akashi-runtime-wasm'
version = '1.0.0'
[dependencies.akashi-runtime]
default-features = false
path = '..'
